--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -1,19 +1,61 @@
-.div-container {
+.categories {
   display: flex;
   align-items: center;
-  justify-content: center;
-  height: 100vh;
+  justify-content: space-around;
 }
 
-.landing {
-  cursor: pointer;
-  border: 1px solid red;
-  padding: 10px;
+.categories li {
+  font-size: 24px;
 }
 
-.greeting {
+.slider {
+  margin-top: 1rem;
+  width: 100%;
+  height: 500px;
+}
+
+.slide-wrappper {
+  margin: 0 auto 60px;
+  padding: 20px;
+  background-color: #f5f6fa;
+}
+
+.slide-list {
+  position: relative;
+}
+.slide-items {
   cursor: pointer;
-  border: 1px solid blue;
-  padding: 10px;
-  margin-left: 3rem;
+  float: left;
+  position: relative;
+}
+
+.slide-items p {
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 5em;
+  font-weight: 500;
+}
+
+.button-container {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.button-container a {
+  cursor: pointer;
+  text-decoration: none;
+  color: #fff;
+  display: inline-block;
+  background-color: #585858;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  line-height: 40px;
+  text-align: center;
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+.button-container :not(:first-child) {
+  margin-left: 20px;
 }
