--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -66,15 +66,42 @@
         </div>
       </div>
     </nav>
-
-    <div class="div-container">
-      <div class="landing" id="landingDiv">
-        <h1>랜딩 페이지</h1>
-      </div>
-      <div class="greeting" id="greetingDiv">
-        <h1>안녕하세요!</h1>
-      </div>
+    
+    <div class="category-menu">
+      <ul class="categories">
+        <li><a href="/product/list?category=Men">Men</a></li>
+        <li><a href="/product/list?category=Women">Women</a></li>
+        <li><a href="/product/list?category=Child">Child</a></li>
+      </ul>
     </div>
-
+    <div class="slide-wrappper">
+      <div class="slide-container">
+          <div class="slide-list">
+              <div class="slide-items">
+                  <figure>
+                      <img class="category-image" name="Men" style="width: 100%; height: 600px;" src="../images/men-cloth.jpg" alt="">
+                  </figure>
+              </div>
+              <div class="slide-items">
+                  <figure>
+                      <img class="category-image" name="Women" style="width: 100%; height: 600px;" src="../images/women-cloth.jpg" alt="">
+                  </figure>
+              </div>
+              <div class="slide-items">
+                  <figure>
+                      <img class="category-image" name="Child" style="width: 100%; height: 600px;" src="../images/child-cloth.jpg" alt="">
+                  </figure>
+              </div>
+              
+          </div>
+          <!-- <button>More</button> -->
+          <div class="button-container">
+              <a href="javascript:void(0)" class="prev"><i class="fas fa-chevron-left"></i></a>
+              <a href="javascript:void(0)" class="next"><i class="fas fa-chevron-right"></i></a>
+              <a href="javascript:void(0)" class="play"><i class="fas fa-play"></i></a>
+              <a href="javascript:void(0)" class="pause"><i class="fas fa-stop"></i></a>
+          </div>
+      </div>
+  </div>
   </body>
 </html>
