Add: Logout 기능과 Header

--- a/src/views/account/account.html
+++ b/src/views/account/account.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <!-- 헤더 -->
-    <nav class="navbar" role="navigation" aria-label="main navigation">
+    <!-- <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="container mt-3">
         <div class="navbar-brand">
           <a class="navbar-item" href="/">
@@ -64,7 +64,7 @@
           </div>
         </div>
       </div>
-    </nav>
+    </nav> -->
 
     <!-- Content -->
     <section class="section">
