--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <!-- 헤더 -->
-    <nav class="navbar" role="navigation" aria-label="main navigation">
+    <!-- <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="container mt-3">
         <div class="navbar-brand">
           <a class="navbar-item" href="/">
@@ -65,7 +65,7 @@
           </div>
         </div>
       </div>
-    </nav>
+    </nav> -->
 
     <!-- 로그인 폼(Form) -->
     <div class="login-form-container">
