--- a/src/views/account/orders/orders.html
+++ b/src/views/account/orders/orders.html
@@ -26,45 +26,6 @@
     <script src="orders.js" type="module" defer></script>
   </head>
   <body>
-    <!-- 헤더 -->
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-      <div class="container mt-3">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="/">
-            <img src="/elice-rabbit.png" width="30" height="30" />
-            <span class="has-text-link">쇼핑-데모</span>
-          </a>
-          <a
-            role="button"
-            class="navbar-burger"
-            aria-label="menu"
-            aria-expanded="false"
-            data-target="navbarBasicExample"
-          >
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-          </a>
-        </div>
-        <div id="navbarBasicExample" class="navbar-menu">
-          <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
-            <ul id="navbar">
-              <li><a href="/account">계정관리</a></li>
-              <li><a href="/logout">로그아웃</a></li>
-              <li>
-                <a href="/cart" aria-current="page">
-                  <span class="icon">
-                    <i class="fas fa-cart-shopping"></i>
-                  </span>
-                  <span>카트</span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
-
     <section class="section">
       <div class="container">
         <div class="block account-header">
@@ -89,17 +50,29 @@
           </p>
 
           <div class="buttons">
-            <button class="button mt-5" id="deleteCompleteButton" aria-label="close">
+            <button
+              class="button mt-5"
+              id="deleteCompleteButton"
+              aria-label="close"
+            >
               네
             </button>
-            <button class="button is-primary mt-5" id="deleteCancelButton" aria-label="close">
+            <button
+              class="button is-primary mt-5"
+              id="deleteCancelButton"
+              aria-label="close"
+            >
               아니오
             </button>
           </div>
         </div>
       </div>
 
-      <button class="modal-close is-large" id="modalCloseButton" aria-label="close"></button>
+      <button
+        class="modal-close is-large"
+        id="modalCloseButton"
+        aria-label="close"
+      ></button>
     </div>
   </body>
 </html>
