--- a/src/views/account/security/security.html
+++ b/src/views/account/security/security.html
@@ -26,48 +26,12 @@
     <script src="security.js" type="module" defer></script>
   </head>
   <body>
-    <!-- 헤더 -->
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-      <div class="container mt-3">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="/">
-            <img src="/elice-rabbit.png" width="30" height="30" />
-            <span class="has-text-link">쇼핑-데모</span>
-          </a>
-          <a
-            role="button"
-            class="navbar-burger"
-            aria-label="menu"
-            aria-expanded="false"
-            data-target="navbarBasicExample"
-          >
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-          </a>
-        </div>
-        <div id="navbarBasicExample" class="navbar-menu">
-          <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
-            <ul id="navbar">
-              <li><a href="/account">계정관리</a></li>
-              <li><a href="/logout">로그아웃</a></li>
-              <li>
-                <a href="/cart" aria-current="page">
-                  <span class="icon">
-                    <i class="fas fa-cart-shopping"></i>
-                  </span>
-                  <span>카트</span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
     <section class="section">
       <div class="container">
         <div class="block account-header">
-          <h1 class="subtitle is-4" id="securityTitle">회원정보 관리 (test@test.com)</h1>
+          <h1 class="subtitle is-4" id="securityTitle">
+            회원정보 관리 (test@test.com)
+          </h1>
         </div>
         <div class="menu-container">
           <div class="form-container">
@@ -75,10 +39,16 @@
               <div class="field">
                 <label class="label" for="fullNameInput">이름</label>
                 <div class="control">
-                  <input class="input" id="fullNameInput" type="text" autocomplete="off" disabled="">
+                  <input
+                    class="input"
+                    id="fullNameInput"
+                    type="text"
+                    autocomplete="off"
+                    disabled=""
+                  />
                   <!-- 토클 스위치 -->
                   <label class="switch selected">
-                    <input type="checkbox" id="fullNameToggle">
+                    <input type="checkbox" id="fullNameToggle" />
                     <span class="slider round"></span>
                   </label>
                 </div>
@@ -87,11 +57,17 @@
               <div class="field">
                 <label class="label" for="passwordInput">비밀번호</label>
                 <div class="control">
-                  <input class="input" id="passwordInput" type="password" autocomplete="off" disabled="">
+                  <input
+                    class="input"
+                    id="passwordInput"
+                    type="password"
+                    autocomplete="off"
+                    disabled=""
+                  />
                   <label class="switch selected">
-                    <input type="checkbox" id="passwordToggle">
+                    <input type="checkbox" id="passwordToggle" />
                     <span class="slider round"></span>
-                    <span class="info-text" style="opacity: 0;">
+                    <span class="info-text" style="opacity: 0">
                       소셜 로그인의 경우는 비밀번호 설정이 불가합니다.
                     </span>
                   </label>
@@ -99,9 +75,17 @@
               </div>
 
               <div class="field">
-                <label class="label" for="passwordConfirmInput">비밀번호 확인</label>
+                <label class="label" for="passwordConfirmInput"
+                  >비밀번호 확인</label
+                >
                 <div class="control">
-                  <input class="input" id="passwordConfirmInput" type="password" autocomplete="off" disabled="">
+                  <input
+                    class="input"
+                    id="passwordConfirmInput"
+                    type="password"
+                    autocomplete="off"
+                    disabled=""
+                  />
                 </div>
               </div>
 
@@ -112,16 +96,27 @@
                 <div class="field-body search">
                   <div class="field">
                     <p class="control">
-                      <input class="input" id="postalCodeInput" type="text" placeholder="주소찾기를 클릭해 주세요." readonly="" disabled="">
+                      <input
+                        class="input"
+                        id="postalCodeInput"
+                        type="text"
+                        placeholder="주소찾기를 클릭해 주세요."
+                        readonly=""
+                        disabled=""
+                      />
                     </p>
                   </div>
                   <div>
-                    <button class="button is-light is-hovered" id="searchAddressButton" disabled="">
+                    <button
+                      class="button is-light is-hovered"
+                      id="searchAddressButton"
+                      disabled=""
+                    >
                       주소찾기
                     </button>
                   </div>
                   <label class="switch switch-address selected">
-                    <input type="checkbox" id="addressToggle">
+                    <input type="checkbox" id="addressToggle" />
                     <span class="slider round"></span>
                   </label>
                 </div>
@@ -132,7 +127,15 @@
                 <div class="field-body">
                   <div class="field">
                     <p class="control">
-                      <input class="input" id="address1Input" type="text" placeholder="" autocomplete="on" readonly="" disabled="">
+                      <input
+                        class="input"
+                        id="address1Input"
+                        type="text"
+                        placeholder=""
+                        autocomplete="on"
+                        readonly=""
+                        disabled=""
+                      />
                     </p>
                   </div>
                 </div>
@@ -143,7 +146,14 @@
                 <div class="field-body">
                   <div class="field">
                     <p class="control">
-                      <input class="input" id="address2Input" type="text" placeholder="" autocomplete="on" disabled="">
+                      <input
+                        class="input"
+                        id="address2Input"
+                        type="text"
+                        placeholder=""
+                        autocomplete="on"
+                        disabled=""
+                      />
                     </p>
                   </div>
                 </div>
@@ -152,15 +162,26 @@
               <div class="field">
                 <label class="label" for="phoneNumberInput">전화번호</label>
                 <div class="control">
-                  <input class="input" id="phoneNumberInput" type="number" placeholder="- 없이 입력해 주세요." autocomplete="on" disabled="">
+                  <input
+                    class="input"
+                    id="phoneNumberInput"
+                    type="number"
+                    placeholder="- 없이 입력해 주세요."
+                    autocomplete="on"
+                    disabled=""
+                  />
                   <label class="switch selected">
-                    <input type="checkbox" id="phoneNumberToggle">
+                    <input type="checkbox" id="phoneNumberToggle" />
                     <span class="slider round"></span>
                   </label>
                 </div>
               </div>
 
-              <button class="button button-submit is-info is-fullwidth js-modal-trigger" id="saveButton" data-target="modal-js-example">
+              <button
+                class="button button-submit is-info is-fullwidth js-modal-trigger"
+                id="saveButton"
+                data-target="modal-js-example"
+              >
                 저장하기
               </button>
 
@@ -168,13 +189,29 @@
               <div id="modal" class="modal">
                 <div class="modal-background" id="modalBackground"></div>
                 <div class="modal-content">
-                  <button class="delete is-large" id="modalCloseButton" aria-label="close"></button>
+                  <button
+                    class="delete is-large"
+                    id="modalCloseButton"
+                    aria-label="close"
+                  ></button>
                   <div class="box">
-                    <p class="mb-3">현재 비밀번호를 입력해 주세요. </p>
-                    <p class="mb-3">카카오 로그인인 경우, 'kakao'를 입력해 주세요. </p>
+                    <p class="mb-3">현재 비밀번호를 입력해 주세요.</p>
+                    <p class="mb-3">
+                      카카오 로그인인 경우, 'kakao'를 입력해 주세요.
+                    </p>
 
-                    <input class="input is-link mb-3" id="currentPasswordInput" type="password" placeholder="" autocomplete="on">
-                    <button class="button is-link mt-5" id="saveCompleteButton" aria-label="close">
+                    <input
+                      class="input is-link mb-3"
+                      id="currentPasswordInput"
+                      type="password"
+                      placeholder=""
+                      autocomplete="on"
+                    />
+                    <button
+                      class="button is-link mt-5"
+                      id="saveCompleteButton"
+                      aria-label="close"
+                    >
                       저장 완료하기
                     </button>
                   </div>
