--- a/src/views/product/add/product-add.html
+++ b/src/views/product/add/product-add.html
@@ -26,44 +26,6 @@
     <script src="product-add.js" type="module" defer></script>
   </head>
   <body>
-    <!-- 헤더 -->
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-      <div class="container mt-3">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="/">
-            <img src="/elice-rabbit.png" width="30" height="30" />
-            <span class="has-text-link">쇼핑-데모</span>
-          </a>
-          <a
-            role="button"
-            class="navbar-burger"
-            aria-label="menu"
-            aria-expanded="false"
-            data-target="navbarBasicExample"
-          >
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-          </a>
-        </div>
-        <div id="navbarBasicExample" class="navbar-menu">
-          <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
-            <ul id="navbar">
-              <li><a href="/account">계정관리</a></li>
-              <li><a href="/logout">로그아웃</a></li>
-              <li>
-                <a href="/cart" aria-current="page">
-                  <span class="icon">
-                    <i class="fas fa-cart-shopping"></i>
-                  </span>
-                  <span>카트</span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
     <section class="section">
       <div class="container">
         <div class="block account-header">
@@ -75,7 +37,13 @@
             <div class="field">
               <label class="label" for="titleInput">제품 이름</label>
               <div class="control">
-                <input class="input" id="titleInput" type="text" placeholder="아이보리 티셔츠" autocomplete="on">
+                <input
+                  class="input"
+                  id="titleInput"
+                  type="text"
+                  placeholder="아이보리 티셔츠"
+                  autocomplete="on"
+                />
               </div>
             </div>
 
@@ -85,9 +53,20 @@
                 <div class="select is-fullwidth">
                   <select id="categorySelectBox">
                     <option value="">카테고리를 선택해 주세요.</option>
-                  
-      <option value="6278acb0927a0d0520ff6260" class="notification is-primary is-light"> Men Clothes </option>
-      <option value="6278acd0927a0d0520ff6263" class="notification is-warning is-light"> Women Clothes </option></select>
+
+                    <option
+                      value="6278acb0927a0d0520ff6260"
+                      class="notification is-primary is-light"
+                    >
+                      Men Clothes
+                    </option>
+                    <option
+                      value="6278acd0927a0d0520ff6263"
+                      class="notification is-warning is-light"
+                    >
+                      Women Clothes
+                    </option>
+                  </select>
                 </div>
               </div>
             </div>
@@ -95,21 +74,41 @@
             <div class="field">
               <label class="label" for="manufacturerInput">제조사</label>
               <div class="control">
-                <input class="input" id="manufacturerInput" type="text" placeholder="OO의류제조(주)" autocomplete="on">
+                <input
+                  class="input"
+                  id="manufacturerInput"
+                  type="text"
+                  placeholder="OO의류제조(주)"
+                  autocomplete="on"
+                />
               </div>
             </div>
 
             <div class="field">
               <label class="label" for="shortDescriptionInput">요약 설명</label>
               <div class="control">
-                <textarea class="textarea" id="shortDescriptionInput" rows="3" placeholder="제품에 대한 1~2문장의 설명을 적어 주세요." autocomplete="on"></textarea>
+                <textarea
+                  class="textarea"
+                  id="shortDescriptionInput"
+                  rows="3"
+                  placeholder="제품에 대한 1~2문장의 설명을 적어 주세요."
+                  autocomplete="on"
+                ></textarea>
               </div>
             </div>
 
             <div class="field">
-              <label class="label" for="detailDescriptionInput">상세 설명</label>
+              <label class="label" for="detailDescriptionInput"
+                >상세 설명</label
+              >
               <div class="control">
-                <textarea class="textarea" id="detailDescriptionInput" rows="8" placeholder="제품에 대한 상세 설명을 적어 주세요." autocomplete="on"></textarea>
+                <textarea
+                  class="textarea"
+                  id="detailDescriptionInput"
+                  rows="8"
+                  placeholder="제품에 대한 상세 설명을 적어 주세요."
+                  autocomplete="on"
+                ></textarea>
               </div>
             </div>
 
@@ -117,7 +116,13 @@
               <label class="label" for="imageInput">제품 사진</label>
               <div class="file has-name is-fullwidth">
                 <label class="file-label">
-                  <input class="file-input" id="imageInput" type="file" name="image-file" accept=".png, .jpeg, .jpg">
+                  <input
+                    class="file-input"
+                    id="imageInput"
+                    type="file"
+                    name="image-file"
+                    accept=".png, .jpeg, .jpg"
+                  />
                   <span class="file-cta">
                     <span class="file-icon">
                       <i class="fas fa-upload" aria-hidden="true"></i>
@@ -134,7 +139,13 @@
             <div class="field">
               <label class="label" for="inventoryInput">재고 수</label>
               <div class="control">
-                <input class="input" id="inventoryInput" type="number" placeholder="10" autocomplete="on">
+                <input
+                  class="input"
+                  id="inventoryInput"
+                  type="number"
+                  placeholder="10"
+                  autocomplete="on"
+                />
               </div>
             </div>
 
@@ -142,7 +153,13 @@
               <label class="label" for="priceInput">가격</label>
               <div class="field">
                 <div class="control has-icons-right">
-                  <input class="input" id="priceInput" type="number" placeholder="10000" autocomplete="on">
+                  <input
+                    class="input"
+                    id="priceInput"
+                    type="number"
+                    placeholder="10000"
+                    autocomplete="on"
+                  />
                   <span class="icon is-small is-right"> 원 </span>
                 </div>
               </div>
@@ -152,7 +169,12 @@
               <label class="label" for="searchKeywordInput">검색 키워드</label>
               <div class="field has-addons">
                 <div class="control header-search-input is-flex-grow-1">
-                  <input class="input" id="searchKeywordInput" type="text" placeholder="남자옷">
+                  <input
+                    class="input"
+                    id="searchKeywordInput"
+                    type="text"
+                    placeholder="남자옷"
+                  />
                 </div>
                 <div class="control">
                   <button class="button is-primary" id="addKeywordButton">
@@ -162,7 +184,10 @@
               </div>
             </div>
 
-            <div class="field is-grouped is-grouped-multiline mt-3" id="keywordContainer"></div>
+            <div
+              class="field is-grouped is-grouped-multiline mt-3"
+              id="keywordContainer"
+            ></div>
 
             <div class="mt-5">
               <button class="button is-primary is-fullwidth" id="submitButton">
