Fix: API 호출 URL 주소 통일

--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -29,9 +29,9 @@
   <body>
     <div class="category-menu">
       <ul class="categories">
-        <li><a href="/product/list?category=Men">Men</a></li>
-        <li><a href="/product/list?category=Women">Women</a></li>
-        <li><a href="/product/list?category=Child">Child</a></li>
+        <li><a href="/product/list?category=Men Clothes">Men</a></li>
+        <li><a href="/product/list?category=Woman Clothes">Women</a></li>
+        <li><a href="/product/list?category=Child Clothes">Child</a></li>
       </ul>
     </div>
     <div class="slide-wrappper">
