Add: 장바구니 추가 및 구매하기 이벤트 등록

--- a/src/views/product/detail/product-detail.html
+++ b/src/views/product/detail/product-detail.html
@@ -40,19 +40,13 @@
             <div class="tile is-child box product-detail">
               <div class="tabs">
                 <ul>
-                  <li id="manufacturerTag">스플래시</li>
+                  <li id="manufacturerTag"></li>
                 </ul>
               </div>
               <div class="content">
-                <p class="subtitle is-3 is-family-monospace" id="titleTag">
-                  아이보리 니트<span class="tag is-success is-rounded"
-                    >추천</span
-                  >
-                </p>
-                <h1 id="priceTag">19,000원</h1>
-                <p class="detail-description" id="detailDescriptionTag">
-                  따뜻한 느낌을 줍니다. 지금깥은 날씨에 제격입니다!
-                </p>
+                <p class="subtitle is-3 is-family-monospace" id="titleTag"></p>
+                <h1 id="priceTag"></h1>
+                <p class="detail-description" id="detailDescriptionTag"></p>
               </div>
             </div>
             <div class="tile is-child box buttons-container">
