Add: Local Storage에 상품 추가 및 존재 여부 검증

--- a/src/views/product/detail/product-detail.html
+++ b/src/views/product/detail/product-detail.html
@@ -32,7 +32,7 @@
           <div class="tile is-6 is-parent">
             <div class="tile is-child box product-image">
               <figure class="image is-sqaure">
-                <img id="productImageTag" src="../../images/men-cloth.jpg" />
+                <img id="productImageTag" />
               </figure>
             </div>
           </div>
