Fix: Refactoring - jaehyeok

--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -39,39 +39,38 @@
         <div class="slide-list">
           <div class="slide-items">
             <figure>
-              <img
+              <a
                 class="category-image"
-                name="Men"
-                style="width: 100%; height: 600px"
-                src="../images/men-cloth.jpg"
-                alt=""
-              />
+                href="/product/list/?category=Men Clothes"
+                ><img
+                  src="../images/men-cloth.jpg"
+                  style="width: 100%; height: 600px"
+              /></a>
             </figure>
           </div>
           <div class="slide-items">
             <figure>
-              <img
+              <a
                 class="category-image"
-                name="Women"
-                style="width: 100%; height: 600px"
-                src="../images/women-cloth.jpg"
-                alt=""
-              />
+                href="/product/list/?category=Woman Clothes"
+                ><img
+                  src="../images/women-cloth.jpg"
+                  style="width: 100%; height: 600px"
+              /></a>
             </figure>
           </div>
           <div class="slide-items">
             <figure>
-              <img
+              <a
                 class="category-image"
-                name="Child"
-                style="width: 100%; height: 600px"
-                src="../images/child-cloth.jpg"
-                alt=""
-              />
+                href="/product/list/?category=Child Clothes"
+                ><img
+                  src="../images/child-cloth.jpg"
+                  style="width: 100%; height: 600px"
+              /></a>
             </figure>
           </div>
         </div>
-        <!-- <button>More</button> -->
         <div class="button-container">
           <a href="javascript:void(0)" class="prev"
             ><i class="fas fa-chevron-left"></i
