--- a/src/views/order/complete/order-complete.html
+++ b/src/views/order/complete/order-complete.html
@@ -53,12 +53,14 @@
               <button
                 class="button is-medium is-fullwidth"
                 id="orderDetailButton"
+                onclick="location.href='../../account/orders'"
               >
                 주문내역 보기
               </button>
               <button
                 class="button is-primary is-medium is-fullwidth"
                 id="shoppingButton"
+                onclick="location.href='/'"
               >
                 쇼핑 계속하기
               </button>
