--- a/src/views/category/add/category-add.html
+++ b/src/views/category/add/category-add.html
@@ -47,6 +47,7 @@
                 <input
                   class="input"
                   id="titleInput"
+                  name="name"
                   type="text"
                   placeholder="Men Clothes"
                   autocomplete="on"
@@ -60,108 +61,11 @@
                 <input
                   class="input"
                   id="descriptionInput"
+                  name="description"
                   type="text"
                   placeholder="센세이셔널한 봄, 여름 코디"
                   autocomplete="on"
                 />
-              </div>
-            </div>
-
-            <div class="field">
-              <label class="label" for="themeSelectBox">카테고리 테마</label>
-              <div class="control">
-                <div class="select is-fullwidth">
-                  <select id="themeSelectBox">
-                    <option value="">테마를 선택해 주세요.</option>
-
-                    <option
-                      value="is-primary is-light"
-                      style="background-color: #ebfffc; color: #00947e"
-                    >
-                      light skygreen
-                    </option>
-
-                    <option
-                      value="is-link is-light"
-                      style="background-color: #eff1fa; color: #3850b7"
-                    >
-                      light purple
-                    </option>
-
-                    <option
-                      value="is-info is-light"
-                      style="background-color: #eff5fb; color: #296fa8"
-                    >
-                      light blue
-                    </option>
-
-                    <option
-                      value="is-success is-light"
-                      style="background-color: #effaf5; color: #257953"
-                    >
-                      light green
-                    </option>
-
-                    <option
-                      value="is-warning is-light"
-                      style="background-color: #fffaeb; color: #946c00"
-                    >
-                      light yellow
-                    </option>
-
-                    <option
-                      value="is-danger is-light"
-                      style="background-color: #feecf0; color: #cc0f35"
-                    >
-                      light pink
-                    </option>
-
-                    <option
-                      value="is-primary"
-                      style="background-color: #00d1b2; color: #fff"
-                    >
-                      skygreen
-                    </option>
-
-                    <option
-                      value="is-link"
-                      style="background-color: #485fc7; color: #fff"
-                    >
-                      blue
-                    </option>
-
-                    <option
-                      value="is-info"
-                      style="background-color: #3e8ed0; color: #fff"
-                    >
-                      skyblue
-                    </option>
-
-                    <option
-                      value="is-success"
-                      style="background-color: #48c78e; color: #fff"
-                    >
-                      green
-                    </option>
-
-                    <option
-                      value="is-warning"
-                      style="
-                        background-color: #ffe08a;
-                        color: rgba(0, 0, 0, 0.7);
-                      "
-                    >
-                      yellow
-                    </option>
-
-                    <option
-                      value="is-danger"
-                      style="background-color: #f14668; color: #fff"
-                    >
-                      red
-                    </option>
-                  </select>
-                </div>
               </div>
             </div>
 
