--- a/src/views/order/complete/order-complete.html
+++ b/src/views/order/complete/order-complete.html
@@ -50,20 +50,20 @@
               <span>주문이 완료되었습니다!</span>
             </div>
             <div class="buttons-container">
-              <button
+              <a
+                href="../../account/orders"
                 class="button is-medium is-fullwidth"
                 id="orderDetailButton"
-                onclick="location.href='../../account/orders'"
               >
                 주문내역 보기
-              </button>
-              <button
+              </a>
+              <a
+                href="/"
                 class="button is-primary is-medium is-fullwidth"
                 id="shoppingButton"
-                onclick="location.href='/'"
               >
                 쇼핑 계속하기
-              </button>
+              </a>
             </div>
           </div>
         </div>
