카테고리 수정 및 삭제

--- a/src/views/category/add/category-add.html
+++ b/src/views/category/add/category-add.html
@@ -33,14 +33,16 @@
     <section class="section">
       <div class="container">
         <div class="block account-header">
-          <h1 class="subtitle is-4">카테고리 추가</h1>
+          <h1 id="content-title" class="subtitle is-4">카테고리 추가</h1>
         </div>
         <div class="register-category-form-container">
           <form
             class="box register-category-form-box"
             id="registerCategoryForm"
           >
-            <p class="title is-5 has-text-primary">카테고리 추가하기</p>
+            <p id="content-subtitle" class="title is-5 has-text-primary">
+              카테고리 추가하기
+            </p>
             <div class="field">
               <label class="label" for="titleInput">카테고리 이름</label>
               <div class="control">
