Fix: 홈페이지 동적 생성

--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -28,49 +28,11 @@
   </head>
   <body>
     <div class="category-menu">
-      <ul class="categories">
-        <li><a href="/product/list?category=Men Clothes">Men</a></li>
-        <li><a href="/product/list?category=Woman Clothes">Women</a></li>
-        <li><a href="/product/list?category=Child Clothes">Child</a></li>
-      </ul>
+      <ul class="categories"></ul>
     </div>
     <div class="slide-wrappper">
       <div class="slide-container">
-        <div class="slide-list">
-          <div class="slide-items">
-            <figure>
-              <a
-                class="category-image"
-                href="/product/list/?category=Men Clothes"
-                ><img
-                  src="../images/men-cloth.jpg"
-                  style="width: 100%; height: 600px"
-              /></a>
-            </figure>
-          </div>
-          <div class="slide-items">
-            <figure>
-              <a
-                class="category-image"
-                href="/product/list/?category=Woman Clothes"
-                ><img
-                  src="../images/women-cloth.jpg"
-                  style="width: 100%; height: 600px"
-              /></a>
-            </figure>
-          </div>
-          <div class="slide-items">
-            <figure>
-              <a
-                class="category-image"
-                href="/product/list/?category=Child Clothes"
-                ><img
-                  src="../images/child-cloth.jpg"
-                  style="width: 100%; height: 600px"
-              /></a>
-            </figure>
-          </div>
-        </div>
+        <div class="slide-list"></div>
         <div class="button-container">
           <a href="javascript:void(0)" class="prev"
             ><i class="fas fa-chevron-left"></i
