--- a/src/views/product/detail/product-detail.html
+++ b/src/views/product/detail/product-detail.html
@@ -53,9 +53,9 @@
               <button class="button is-warning" id="addToCartButton">
                 장바구니 추가하기
               </button>
-              <a href="/order" class="button is-info ml-2" id="purchaseButton">
+              <button class="button is-info ml-2" id="purchaseButton">
                 바로 구매하기
-              </a>
+              </button>
             </div>
           </div>
         </div>
