--- a/src/views/account/signout/signout.html
+++ b/src/views/account/signout/signout.html
@@ -34,6 +34,7 @@
           <label class="label" for="passwordInput">현재 비밀번호</label>
           <div class="control">
             <input
+              name="currentPassword"
               class="input"
               id="passwordInput"
               type="password"
