--- a/src/views/admin/admin.html
+++ b/src/views/admin/admin.html
@@ -103,6 +103,19 @@
               <p class="subtitle is-5">제품 정보를 추가할 수 있습니다.</p>
             </div>
           </a>
+          <a class="menu-card" href="/product/edit">
+            <div class="menu-icon">
+              <span class="icon has-text-info">
+                <i class="fa-solid fa-won-sign"></i>
+              </span>
+            </div>
+            <div class="menu-body">
+              <p class="title is-3">제품 관리</p>
+              <p class="subtitle is-5">
+                제품 정보를 수정 또는 삭제할 수 있습니다.
+              </p>
+            </div>
+          </a>
         </div>
       </div>
     </section>
