--- a/src/views/product/add/product-add.html
+++ b/src/views/product/add/product-add.html
@@ -29,11 +29,13 @@
     <section class="section">
       <div class="container">
         <div class="block account-header">
-          <h1 class="subtitle is-4">제품판매</h1>
+          <h1 id="content-title" class="subtitle is-4">제품판매</h1>
         </div>
         <div class="register-product-form-container">
           <form class="box register-product-form-box" id="registerProductForm">
-            <p class="title is-5 has-text-primary">제품을 판매해 보세요</p>
+            <p id="content-subtitle" class="title is-5 has-text-primary">
+              제품을 판매해 보세요
+            </p>
             <div class="field">
               <label class="label" for="titleInput">제품 이름</label>
               <div class="control">
