--- a/src/views/order/order.html
+++ b/src/views/order/order.html
@@ -49,7 +49,33 @@
             <div class="tile is-parent cart-products">
               <div class="box delivery-info">
                 <!-- 배송지 정보 -->
-                <p class="subtitle is-4">배송지정보</p>
+                <div class="field is-horizontal address-info">
+                  <p class="subtitle is-4">배송지정보</p>
+                  <input
+                    type="radio"
+                    name="address"
+                    id="customAddress"
+                    checked
+                  />
+                  <label class="address-choice" for="customAddress"
+                    >직접 입력
+                  </label>
+                  <button
+                    type="button"
+                    class="button is-small is-light is-success"
+                    id="addressSaveButton"
+                  >
+                    배송지 저장
+                  </button>
+                  <button
+                    type="button"
+                    class="button is-small is-light is-danger is-hidden"
+                    id="addressDeleteButton"
+                    data-address-name=""
+                  >
+                    배송지 삭제
+                  </button>
+                </div>
                 <div class="field is-horizontal">
                   <div class="field-label is-normal">
                     <label class="label" for="receiverName">이름</label>
@@ -109,6 +135,7 @@
                     </div>
                     <div>
                       <button
+                        type="button"
                         class="button is-light is-hovered"
                         id="searchAddressButton"
                       >
@@ -232,7 +259,11 @@
                   <p class="total-price" id="orderTotal"></p>
                 </div>
                 <div class="purchase">
-                  <button class="button is-info" id="checkoutButton">
+                  <button
+                    type="submit"
+                    class="button is-info"
+                    id="checkoutButton"
+                  >
                     결제하기
                   </button>
                 </div>
@@ -242,5 +273,85 @@
         </form>
       </div>
     </section>
+    <div
+      id="modal"
+      class="modal"
+      data-postal-code=""
+      data-address1=""
+      data-address2=""
+    >
+      <div class="modal-background" id="modalBackground"></div>
+      <div class="modal-content">
+        <div class="box">
+          <div class="field-label is-normal">
+            <label class="label" for="addressName">배송지명</label>
+          </div>
+          <div class="field-body">
+            <div class="field">
+              <p class="control">
+                <input
+                  class="input"
+                  id="addressNameInput"
+                  name="addressName"
+                  type="text"
+                  placeholder="배송지명을 입력해 주세요."
+                  autocomplete="on"
+                />
+              </p>
+            </div>
+          </div>
+          <div>
+            <button
+              class="button ml-2"
+              id="submitButton"
+              data-action="submit"
+              aria-label="close"
+            >
+              제출
+            </button>
+          </div>
+        </div>
+      </div>
+      <button
+        class="modal-close is-large"
+        id="modalCloseButton"
+        data-action="close"
+        aria-label="close"
+      ></button>
+    </div>
+    <div id="modal2" class="modal" data-target-address-name="">
+      <div class="modal-background" id="modal2Background"></div>
+      <div class="modal-content">
+        <div class="box">
+          <p class="mr-5">배송지를 삭제하시겠습니까?</p>
+
+          <div class="buttons">
+            <button
+              class="button mt-5"
+              id="deleteCompleteButton"
+              data-action="delete"
+              aria-label="close"
+            >
+              네
+            </button>
+            <button
+              class="button is-primary mt-5"
+              id="deleteCancelButton"
+              data-action="close"
+              aria-label="close"
+            >
+              아니오
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <button
+        class="modal-close is-large"
+        id="modal2CloseButton"
+        data-action="close"
+        aria-label="close"
+      ></button>
+    </div>
   </body>
 </html>
