--- a/src/views/product/list/product-list.html
+++ b/src/views/product/list/product-list.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>쇼핑-21팀</title>
     <!-- 아이콘 -->
     <link
       rel="icon"
