--- a/src/views/product/list/product-list.css
+++ b/src/views/product/list/product-list.css
@@ -3,3 +3,12 @@
   grid-template-columns: repeat(auto-fill, 300px);
   grid-gap: 100px;
 }
+
+.categories {
+  display: flex;
+  margin: 0 auto;
+}
+
+.categories li {
+  font-size: 24px;
+}
