--- a/src/views/product/list/product-list.html
+++ b/src/views/product/list/product-list.html
@@ -27,6 +27,16 @@
     <script src="product-list.js" type="module" defer></script>
   </head>
   <body>
+    <nav
+      class="navbar"
+      role="navigation"
+      aria-label="main navigation"
+      style="margin: 0 auto"
+    >
+      <div id="navbarBasicExample" class="navbar-menu category-menu">
+        <ul class="navbar-start categories"></ul>
+      </div>
+    </nav>
     <section class="section">
       <div
         class="container product-item-container"
